[package]
name = "redis_lunatic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.4.0", features = ["serde"] }
lunatic = "0.13.1"
pretty_assertions = "1.3.0"
serde = "1.0.163"
thiserror = "1.0.40"
